# rust-api-boilerplate

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
migrations/: 20251121214836_create_users_table.sql
src/: auth.rs  config.rs  db.rs  http.rs  main.rs  redis_client.rs
src/auth/: jwt.rs
src/http/: middleware.rs  routes.rs
src/http/controllers/: auth.rs  health.rs
src/models/: user.rs
src/repositories/: user_repository.rs
src/services/: user_service.rs
