[package]
name = "rust-api-boilerplate"
version = "0.1.0"
edition = "2024"

[dependencies]

[dependencies.axum]
version = "0.8.7"
features = ["macros", "json"]

[dependencies.tokio]
version = "1.48.0"
features = ["full"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.145"

[dependencies.dotenvy]
version = "0.15.7"

[dependencies.anyhow]
version = "1.0.100"

[dependencies.thiserror]
version = "2.0.17"

[dependencies.tracing]
version = "0.1.41"

[dependencies.tracing-subscriber]
version = "0.3.20"
features = ["fmt", "env-filter"]

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
    "uuid"
]

[dependencies.openssl]
version = "0.10.75"
features = ["vendored"]

[dependencies.redis]
version = "0.32.7"
features = ["tokio-comp"]

[dependencies.jsonwebtoken]
version = "10.2.0"
default-features = false
features = ["use_pem", "rust_crypto"]